@@ -1,4 +1,6 @@
 0.5.0
+* config.fs: sys.bigendian -> bigendian? (2007-06-05)
+* sh2: new module (SHA-256) (2007-06-05)
 * config.fs: new word ?free for freeing memory blocks (2007-05-21)
 * rgx: new module (Regular Expression) (2007-05-10)
 * nfe: new module (Non-deterministic finite automata expression) (2007-05-08)
